respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Customs__c</fullName>
        <label>Customs</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Border__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agua Prieta</fullName>
                </value>
                <value>
                    <fullName>Ciudad Acuña</fullName>
                </value>
                <value>
                    <fullName>Ciudad Camargo</fullName>
                </value>
                <value>
                    <fullName>Ciudad Juárez</fullName>
                </value>
                <value>
                    <fullName>Ciudad Miguel Alemán</fullName>
                </value>
                <value>
                    <fullName>Ciudad Reynosa</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Matamoros</fullName>
                </value>
                <value>
                    <fullName>Mexicali</fullName>
                </value>
                <value>
                    <fullName>Naco</fullName>
                </value>
                <value>
                    <fullName>Nogales</fullName>
                </value>
                <value>
                    <fullName>Nuevo Laredo</fullName>
                </value>
                <value>
                    <fullName>Ojinaga</fullName>
                </value>
                <value>
                    <fullName>Piedras Negras</fullName>
                </value>
                <value>
                    <fullName>Puerto Palomas</fullName>
                </value>
                <value>
                    <fullName>San Luis Río Colorado</fullName>
                </value>
                <value>
                    <fullName>Sonoyta</fullName>
                </value>
                <value>
                    <fullName>Tecate</fullName>
                </value>
                <value>
                    <fullName>Tijuana</fullName>
                </value>
                <value>
                    <fullName>Ciudad Hidalgo</fullName>
                </value>
                <value>
                    <fullName>Subteniente López</fullName>
                </value>
                <value>
                    <fullName>Acapulco</fullName>
                </value>
                <value>
                    <fullName>Altamira</fullName>
                </value>
                <value>
                    <fullName>Cancún</fullName>
                </value>
                <value>
                    <fullName>Ciudad del Carmen</fullName>
                </value>
                <value>
                    <fullName>Coatzacoalcos</fullName>
                </value>
                <value>
                    <fullName>Dos Bocas</fullName>
                </value>
                <value>
                    <fullName>Ensenada</fullName>
                </value>
                <value>
                    <fullName>Guaymas</fullName>
                </value>
                <value>
                    <fullName>La Paz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DATE_ACUSE_RECIBIDO_Date__c</fullName>
        <formula>DATEVALUE(Date_Verify_Acuse_SAP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DATE ACUSE RECIBIDO (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Acuse_SAP__c</fullName>
        <label>Date Acuse SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Autorizado_FP_FO__c</fullName>
        <label>Date Autorizado FP/FO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Deactivate_Monitoring__c</fullName>
        <label>Date Deactivate Monitoring</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Planner_Confirmed__c</fullName>
        <label>Date Planner Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Receive_from_SAP__c</fullName>
        <label>Date Receive from SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sello_Acuse__c</fullName>
        <label>Date Sello Acuse</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Verify_Acuse_SAPTxt__c</fullName>
        <label>DATE ACUSE RECIBIDO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Verify_Acuse_SAP__c</fullName>
        <formula>IF(  VERIFY_ACUSE_SAP__c  = True, Now() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DATE ACUSE RECIBIDO</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Verify_PakControlTxt__c</fullName>
        <label>Date Verify PakControl</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>OI Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_guia_recibida__c</fullName>
        <label>Date guía recibida</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_planner_canceled__c</fullName>
        <formula>IF(ISPICKVAL( Shipment_Status_Plann__c, &quot;Cancel&quot; ), TODAY() ,null)</formula>
        <label>Date planner canceled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_reating__c</fullName>
        <label>Date reating</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_status_cosed__c</fullName>
        <label>Date status 2 closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_FN_Finished__c</fullName>
        <description>Fecha de cuando el monitorista da por finalizado el folio</description>
        <label>Date time Finished monitoreo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Datos_Carta_Porte__c</fullName>
        <description>Captura los datos de carta porte que son modificados, como lo son RFC Destinatario y Destinatario</description>
        <label>Datos Carta Porte</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Note_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bandera para identificar si el SP cuenta con el documento de debit note cargado</description>
        <label>Debit Note Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Declined_for__c</fullName>
        <label>Declined for</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Shipment_Status_Plann__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disponibilidad</fullName>
                </value>
                <value>
                    <fullName>Falla operativa</fullName>
                </value>
                <value>
                    <fullName>Error de captura</fullName>
                </value>
                <value>
                    <fullName>Solicitud masiva</fullName>
                </value>
                <value>
                    <fullName>Cubre otro proveedor</fullName>
                </value>
                <value>
                    <fullName>Solicitud SPOT</fullName>
                </value>
                <value>
                    <fullName>Fuera de Plan</fullName>
                </value>
                <value>
                    <fullName>Ruta Atípica</fullName>
                </value>
                <value>
                    <fullName>Folio Fuera de Negocio</fullName>
                </value>
                <value>
                    <fullName>Viaje sin folio</fullName>
                </value>
                <value>
                    <fullName>Cancelación de cliente</fullName>
                </value>
                <value>
                    <fullName>Sobredemanda</fullName>
                </value>
                <value>
                    <fullName>Adicional al Plan</fullName>
                </value>
                <value>
                    <fullName>Bajo Margen</fullName>
                </value>
                <value>
                    <fullName>Tiempo Descarga excedido</fullName>
                </value>
                <value>
                    <fullName>Tiempo de Confirmacion</fullName>
                </value>
                <value>
                    <fullName>Falla Mecánica</fullName>
                </value>
                <value>
                    <fullName>Equipo No Disponible</fullName>
                </value>
                <value>
                    <fullName>CE Expirada</fullName>
                </value>
                <value>
                    <fullName>Unidad Falta de Localización GPS</fullName>
                </value>
                <value>
                    <fullName>Incumplimiento a Cita</fullName>
                </value>
                <value>
                    <fullName>Unidad Fuera Estrategia</fullName>
                </value>
                <value>
                    <fullName>Cancelacion Inmediata</fullName>
                    <isActive>false</isActive>
                    <label>Cancelación Inmediata</label>
                </value>
                <value>
                    <fullName>Cliente Fuera de WTP</fullName>
                    <isActive>false</isActive>
                    <label>Cliente Fuera de WTP</label>
                </value>
                <value>
                    <fullName>Fuera de WTP</fullName>
                    <isActive>false</isActive>
                    <label>Fuera de WTP</label>
                </value>
                <value>
                    <fullName>Giros Fuera de WTP</fullName>
                    <isActive>false</isActive>
                    <label>Giros Fuera de WTP</label>
                </value>
                <value>
                    <fullName>Horarios incorrectos</fullName>
                    <isActive>false</isActive>
                    <label>Horarios incorrectos</label>
                </value>
                <value>
                    <fullName>Ruta Fuera de WTP</fullName>
                    <isActive>false</isActive>
                    <label>Ruta Fuera de WTP</label>
                </value>
                <value>
                    <fullName>Tabla periodica</fullName>
                    <isActive>false</isActive>
                    <label>Tabla periódica</label>
                </value>
                <value>
                    <fullName>Transportista quedó mal</fullName>
                    <isActive>false</isActive>
                    <label>Transportista quedó mal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Address_Shipment__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Cartage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Site of Discharge&quot; and &quot;Site of Load&quot;</inlineHelpText>
        <label>Delivery Zone</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Delivery_Zone__c.Port_Airport__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site_of_Discharge__c</valueField>
            </filterItems>
            <filterItems>
                <field>Delivery_Zone__c.Port_Airport__c</field>
                <operation>equals</operation>
                <valueField>$Source.Site_of_Load__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Delivery_Zone__c</referenceTo>
        <relationshipLabel>Shipments (Delivery Drayage)</relationshipLabel>
        <relationshipName>Shipments_DeliveryCartage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_from_B__c</fullName>
        <label>Departure from B</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_from_C__c</fullName>
        <label>Departure from C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_from_D__c</fullName>
        <label>Departure from D</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descanso_por_ruta__c</fullName>
        <formula>FLOOR( Horas_totales_en_ruta__c /18)</formula>
        <label>Descanso por ruta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_Packages_Goods__c</fullName>
        <label>Description Packages/Goods</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Address__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Destination Agent)</relationshipLabel>
        <relationshipName>Shipments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_Airport__c</fullName>
        <label>Destination Airport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>ABD</fullName>
                </value>
                <value>
                    <fullName>ABJ</fullName>
                </value>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>ADE</fullName>
                </value>
                <value>
                    <fullName>ADL</fullName>
                </value>
                <value>
                    <fullName>ADZ</fullName>
                </value>
                <value>
                    <fullName>AGP</fullName>
                </value>
                <value>
                    <fullName>AJU</fullName>
                </value>
                <value>
                    <fullName>AKL</fullName>
                </value>
                <value>
                    <fullName>ALC</fullName>
                </value>
                <value>
                    <fullName>ALG</fullName>
                </value>
                <value>
                    <fullName>ALP</fullName>
                </value>
                <value>
                    <fullName>ALT</fullName>
                </value>
                <value>
                    <fullName>ALY</fullName>
                </value>
                <value>
                    <fullName>AMM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ANC</fullName>
                </value>
                <value>
                    <fullName>ANF</fullName>
                </value>
                <value>
                    <fullName>ANK</fullName>
                </value>
                <value>
                    <fullName>ANR</fullName>
                </value>
                <value>
                    <fullName>APW</fullName>
                </value>
                <value>
                    <fullName>AQP</fullName>
                </value>
                <value>
                    <fullName>ARH</fullName>
                </value>
                <value>
                    <fullName>ARI</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>ASU</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination_Location__c</fullName>
        <label>Destination Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Devolucion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Devolución</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dias__c</fullName>
        <formula>Date_Acuse_SAP__c - Date_Sello_Acuse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acuses Dias Transcurridos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direccion_Alternativa__c</fullName>
        <description>Campo para la captura de direcciones alternativas (tiene enfoque para el cliente Kimberly)</description>
        <label>Direccion Alternativa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_Monitoreo__c</fullName>
        <label>Direccion Monitoreo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentos_de_Cruce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentos de Cruce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drayage__c</fullName>
        <label>Drayage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All by Truck</fullName>
                </value>
                <value>
                    <fullName>Rail and Truck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EJEMPLO__c</fullName>
        <label>EJEMPLO</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ESTATUS_FACT_SAP__c</fullName>
        <label>ESTATUS FACT - SAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEDIDO</fullName>
                </value>
                <value>
                    <fullName>FACTURADO</fullName>
                </value>
                <value>
                    <fullName>CANCELADO</fullName>
                </value>
                <value>
                    <fullName>PEND INFORMACION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETA_ATA__c</fullName>
        <label>OI ETA / ATA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_D_T02_del__c</fullName>
        <formula>datetimevalue(ETA_Point_of_Discharge__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA D+T02</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETA_D_T__c</fullName>
        <formula>TEXT(datetimevalue(ETA_Point_of_Discharge__c)) &amp; TEXT (timevalue(ETA_Time_Point_of_Discharge__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA D+T</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_Point_of_Discharge__c</fullName>
        <label>ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETA_SC__c</fullName>
        <label>ETA SC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETA_Time_Point_of_Discharge__c</fullName>
        <label>ETA Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ETD_D_T__c</fullName>
        <formula>(TEXT(DAY(ETD_from_Point_of_Load__c)) &amp; &quot;/&quot; &amp; TEXT(MONTH(ETD_from_Point_of_Load__c)) &amp; 
	&quot;/&quot; &amp; TEXT(YEAR(ETD_from_Point_of_Load__c))) &amp; &quot; &quot; &amp; (TEXT(ETD_Time_from_Point_of_Load__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETD D+T</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD_Time_from_Point_of_Load__c</fullName>
        <label>ETD Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ETD__c</fullName>
        <label>OI ETD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD_date_time__c</fullName>
        <formula>DATETIMEVALUE(TEXT( ETD_from_Point_of_Load__c )&amp; &apos; &apos;&amp; LEFT( TEXT(ETD_Time_from_Point_of_Load__c ),8))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETD date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETD_from_Point_of_Load__c</fullName>
        <label>ETD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Acuse__c</fullName>
        <formula>Operation_Executive__r.Ejecutivo_Acuse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ejecutivo Acuse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Asistente_Vtas__c</fullName>
        <label>Email Asistente Vtas</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Cobranza_11__c</fullName>
        <label>Email Cobranza 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Cobranza_22__c</fullName>
        <label>Email Cobranza 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Manager__c</fullName>
        <label>Email Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sales_ExecutiveSP__c</fullName>
        <label>Email Sales Executive</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Executive__c</fullName>
        <formula>Account_for__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Sales Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Route_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Route Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Encuesta_Monitoreo__c</fullName>
        <label>Encuesta **Monitoreo**</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Enviado_Sap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado Sap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equip_Loaded__c</fullName>
        <label>Loading Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equip_Placed__c</fullName>
        <label>Placed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equip_Reserved__c</fullName>
        <description>Fecha de cuando llego al destino, se activa por medio de una geocerca</description>
        <label>Unloading Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equip_Solicited__c</fullName>
        <description>Se llena cuando inicia el proceso de descarga</description>
        <label>Unloading Placed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equip_Unloaded__c</fullName>
        <description>Fecha cuando ya se termino la descarga</description>
        <label>Unloaded Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estatus_Cerrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estatus Cerrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estatus_de_Finalizado__c</fullName>
        <label>Estatus de Finalizado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entregado a cliente</fullName>
                </value>
                <value>
                    <fullName>Venta interna</fullName>
                </value>
                <value>
                    <fullName>Descuento al proveedor</fullName>
                </value>
                <value>
                    <fullName>Donación</fullName>
                </value>
                <value>
                    <fullName>Perdida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estatus_de_operacion__c</fullName>
        <label>Estatus de operación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flete en falso</fullName>
                </value>
                <value>
                    <fullName>Pérdida de cita</fullName>
                </value>
                <value>
                    <fullName>Robo</fullName>
                </value>
                <value>
                    <fullName>Devolución_entregada</fullName>
                    <label>Devolución entregada</label>
                </value>
                <value>
                    <fullName>Devolución pendiente</fullName>
                </value>
                <value>
                    <fullName>Faltante de mercancía</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Reference_OI__c</fullName>
        <label>OIV2 External Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FI_SPCounterEnvio__c</fullName>
        <formula>IF( MOD(VALUE(SPCounter__c),2)= 0,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FI-SPCounterEnvio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FNRequiere_Acuse__c</fullName>
        <formula>TEXT(Account_for__r.Requiere_Acuse_Sap__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requiere Acuse?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_ALLSPEnvio__c</fullName>
        <formula>IF( MOD(VALUE(SPCounter__c),12)= 0 &amp;&amp;  ShipmentService__c = &quot;SP-FN&quot;,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FN ALLSPEnvio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN_Concentrado_Monitoreo__c</fullName>
        <label>Concentrado Monitoreo</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_Confirmation__c</fullName>
        <label>Confirmation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FN_Enrampe_Time__c</fullName>
        <label>Enrampe Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>FN_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_Rampa__c</fullName>
        <label>Rampa</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_Receipt_of_Sheets__c</fullName>
        <label>Receipt of Sheets</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_Remission__c</fullName>
        <label>Remission</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_Report_of_the_Day__c</fullName>
        <label>Report of the Day</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FN_SPCounterEnvio__c</fullName>
        <formula>IF( MOD(VALUE(SPCounter__c),4)= 0,True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FN-SPCounterEnvio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN_Sale_Order_Number__c</fullName>
        <label>Sale Order Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_Trip_Term__c</fullName>
        <label>Trip Term</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSR_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSR Message</label>
        <referenceTo>Log__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fecha_Asunto_Cita__c</fullName>
        <label>Fecha Asunto/Cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_Retorno_Contenedor__c</fullName>
        <label>Fecha Retorno de Contenedor</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Acuse_Recibido__c</fullName>
        <label>Fecha de Acuse Recibido</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_facturado__c</fullName>
        <label>Fecha facturado</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_final_devolucion__c</fullName>
        <label>Fecha final devolucion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_inicio_devolucion__c</fullName>
        <label>Fecha inicio devolución</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_recuperacion_de_mercancia__c</fullName>
        <label>Fecha recuperación de mercancía</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Delivery_Address_Latitude__c</fullName>
        <label>Delivery Address Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Delivery_Address_Longitude__c</fullName>
        <label>Delivery Address Longitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Discharge_Code__c</fullName>
        <label>OI Final Discharge Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Discharge__c</fullName>
        <label>OI Final Discharge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <label>Flight Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folios_para_Facturar__c</fullName>
        <label>Folios para Facturar</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forwarder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Forwarder)</relationshipLabel>
        <relationshipName>Shipments_Forwarder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_Days__c</fullName>
        <label>Free Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Amount__c</fullName>
        <label>Freight Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREDIT</fullName>
                </value>
                <value>
                    <fullName>PREPAID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freight_Mode__c</fullName>
        <label>Freight Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Sea</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>